# rag-document-processing

./: .gitignore  README.md  kb_curation_pipeline_enhanced.ipynb  pyproject.toml  qa_pairs.json
evaluation/Base/: llamaindex_aggregate_metrics_20250923_000959.json  llamaindex_metrics_20250923_000959.json  ragas_aggregate_metrics_20250923_000959.json  ragas_metrics_20250923_000959.csv
evaluation/Docling/: llamaindex_aggregate_metrics_20250922_235056.json  llamaindex_metrics_20250922_235056.json  ragas_aggregate_metrics_20250922_235056.json  ragas_metrics_20250922_235056.csv
evaluation/LlamaParse/: llamaindex_aggregate_metrics_20250922_191244.json  llamaindex_metrics_20250922_191244.json  ragas_aggregate_metrics_20250922_191244.json  ragas_metrics_20250922_191244.csv
parsed_docs/: apple_2021_10k_baseline.md  apple_2021_10k_docling.md  apple_2021_10k_llama.md
