[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "docling>=2.53.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "langsmith>=0.4.29",
    "llama-index>=0.14.2",
    "llama-index-core>=0.14.2",
    "llama-index-vector-stores-chroma>=0.5.3",
    "llama-index-vector-stores-qdrant>=0.8.5",
    "llama-parse>=0.6.54",
    "notebook>=7.4.5",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "ragas>=0.3.5",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
]
